# solita-dev-academy-2023-exercise

./: .dockerignore  .env.example  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile  README.md  sqlx-data.json
backend/queries/postgres/: 02-create_table_station_operators.sql  04-create_table_journeys.sql  11-create_view_journey_list.sql  12-create_view_station.sql  13-create_view_station_list.sql  create_table_cities.sql  create_table_journeys.sql  create_table_stations.sql  create_view_journey_list.sql  create_view_station.sql  drop_table_journeys.sql  drop_table_station_operators.sql  drop_view_journey_list.sql  drop_view_station.sql  drop_view_station_list.sql
backend/src/: api.rs  database.rs  datasource.rs  main.rs  model.rs  unit.rs
backend/src/api/: journey.rs  station.rs
backend/src/database/: postgres.rs  postgres_view.rs  view.rs
backend/src/database/postgres/: city.rs  journey.rs  station.rs  station_operator.rs
backend/src/database/postgres_view/: journey_list.rs  station.rs  station_list.rs
backend/src/datasource/journey/: csv.rs
backend/src/datasource/station/: csv.rs
backend/src/model/: city.rs  journey.rs  station.rs  station_operator.rs
backend/tests/pipeline_test_data/: journey_disallows_duplicates.csv  journey_disallows_invalid_stations.csv  journey_disallows_less_than_10_meter.csv  journey_disallows_less_than_10_second.csv  station_pipeline.csv
database/: Dockerfile
frontend/: Dockerfile  README.md  package-lock.json  package.json  svelte.config.js
frontend/src/: app.scss  (+1 more)
reverse_proxy/: Dockerfile  nginx.conf
(+14 files in other folders)
