[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.63"
dotenv = "0.15.0"
sqlx = { version = "0.6.2", features = ["postgres", "runtime-tokio-rustls"] }
thiserror = "=1.0.34" # There seems to be some toolchain issues when using a newer version.
tokio = { version = "1.24.2", features = ["full"] }
