[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.63"
axum = "0.6.4"
chrono = { version = "0.4.23", features = ["serde"] }
csv = "1.1.6"
dotenv = "0.15.0"
reqwest = "0.11.14"
serde = { version = "1.0.152", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["postgres", "runtime-tokio-rustls", "chrono"] }
thiserror = "=1.0.34" # There seems to be some toolchain issues when using a newer version.
tokio = { version = "1.24.2", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["cors"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[features]
default = ["postgres"]
postgres = []
